js262/test/language/module-code/parse-err-decl-pos-import-while.js


/*---
description: Statement cannot contain an `import` declaration
esid: sec-modules
negative:
  phase: parse
  type: SyntaxError
flags: [module]
---*/

$DONOTEVALUATE();

while (false) import v from './decl-pos-import-while.js';
